CHANGELOG
--------------------------

ClanSphere 2011.0 >> 2011-04-XX
___________________________________________________________

-- Recommended PHP version changed to 5.3.6

-> Added function cs_title to handle title generation (hajo)
   Fixes title problems with ajax and includes action names if found
-> Added robots.txt file to keep crawlers away from some directories (hajo)
-> Changed XSRF logs to require the developer mode (hajo)
-> Fixed some issues with am/pm date handling (hajo)
-> Updated CKEditor to 3.5.2 (hajo)
-> Updated jQuery to 1.5.1 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2010.3 >> 2011-01-24
___________________________________________________________

-- Recommended PHP version changed to 5.3.5

>> Security: Fixed xss possibility in url abcode tag (schiri)

-> Added database subtype support to switch between MySQL storage engines (hajo)
-> Added new optional theme placeholder page:template that contains the directory of the default template (hajo)
-> Fixed abcode create to work again and to remember input (hajo)
-> Fixed escaping in static pages with rte_html turned on, e.g. ckeditor (hajo)
-> Reworked board toplist, stats, navtop and navtop2 to not cause heavy sql server load (hajo)
-> Updated CKEditor to 3.4.3 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2010.2 >> 2010-12-03
___________________________________________________________

-> Added cache clearing to admin pages for languages, modules, themes and templates (hajo)
   By using them new content is no longer hidden until the full cache is cleared
-> Added simple database integrity check to database mod (hajo)
-> Added template placeholder {func:path} that does what {page:path} is for themes (hajo)
-> Changed cookie to be valid in multiple places at a time again (hajo)
-> Changed mods/.htaccess content to be deactivated by default as it caused problems (hajo)