@@ -1,3 +1,0 @@
-UPDATE {pre}_options SET options_value = '2011.0 DEV' WHERE options_mod = 'clansphere' AND options_name = 'version_name';
-UPDATE {pre}_options SET options_value = '2011-03-10' WHERE options_mod = 'clansphere' AND options_name = 'version_date';
-UPDATE {pre}_options SET options_value = '67' WHERE options_mod = 'clansphere' AND options_name = 'version_id';
