@@ -1,0 +1,3 @@
+UPDATE {pre}_options SET options_value = '2011.0 DEV 2' WHERE options_mod = 'clansphere' AND options_name = 'version_name';
+UPDATE {pre}_options SET options_value = '2011-03-27' WHERE options_mod = 'clansphere' AND options_name = 'version_date';
+UPDATE {pre}_options SET options_value = '69' WHERE options_mod = 'clansphere' AND options_name = 'version_id';
