@@ -1,20 +1,28 @@
 CHANGELOG
 --------------------------
 
-ClanSphere 2011.0 >> 2011-04-XX
+ClanSphere 2011.0 >> 2011-03-28
 ___________________________________________________________
 
 -- Recommended PHP version changed to 5.3.6
 
 -> Added function cs_title to handle title generation (hajo)
    Fixes title problems with ajax and includes action names if found
--> Added robots.txt file to keep crawlers away from some directories (hajo)
 -> Changed XSRF logs to require the developer mode (hajo)
 -> Fixed some issues with am/pm date handling (hajo)
 -> Updated CKEditor to 3.5.2 (hajo)
 -> Updated jQuery to 1.5.1 (hajo)
 
 -- Fixed a few bugs that were reported at "Trac" --
+
+
+ClanSphere 2010.3.1 >> 2011-03-27
+___________________________________________________________
+
+
+>> Security: Fixed upload and xss issue in FCKEditor Filebrowser (thanks to CKSource for help)
+
+-> Added robots.txt file to keep crawlers away from some directories (hajo)
 
 
 ClanSphere 2010.3 >> 2011-01-24
